# papercut

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml
age/: init.sql
backend/: alembic.ini  config.py  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_create_documents.py  002_add_embeddings.py  004_ingestion_status.py  005_add_content_hash.py
backend/answers/: __init__.py  composer.py  models.py
backend/api/: sse.py
backend/api/routes/: documents.py  graph.py  health.py  query.py
backend/chat/: contextualizer.py  schemas.py  sessions.py
backend/embeddings/: __init__.py  base.py  factory.py  fastembed_provider.py
backend/evaluation/: __init__.py  context_extractor.py  dataset.py  harness.py  reporter.py  run_eval.py
backend/extractors/: __init__.py  base.py  generic.py  pipeline_trace.py  registry.py  resume.py
backend/graph/: age_connection.py  age_wrapper.py  extractor.py  llm_bridge.py  postprocessing.py  retriever.py  store.py
backend/llm/: __init__.py  base.py  factory.py  ollama_provider.py  openai_provider.py
backend/models/: canonical_document.py  db_models.py  document_chunk.py  document_status.py
backend/query/: __init__.py  classifier.py  execution_trace.py  hybrid_retriever.py  planner.py  result.py  semantic_retriever.py  structured_retriever.py
backend/storage/: database.py  document_store.py
db/: Dockerfile  init.sql
docs/: ARCHITECTURE.md  CONTRIBUTING.md  ENGINEERING_PRINCIPLES.md  EVALUATION.md  PHASES.md  PROJECT_SPEC.md  TRADEOFFS.md
(+92 files in other folders)
